classDiagram
    %% Interfaces
    class ICommand {
        <<interface>>
        +execute(input_dto: Any) Any
    }
    class IQuery {
        <<interface>>
        +execute(input_dto: Any) Any
    }
    class IModule {
        <<interface>>
        +register(app: App) None
        +boot(app: App) None
    }
    class IContainer {
        <<interface>>
        +bind(abstract: type, concrete: type) None
        +singleton(abstract: type, instance_or_factory: Union[Any, Callable]) None
        +resolve(abstract: type) T
    }
    class IEventBus {
        <<interface>>
        +emit(event_name: str, data: Any) None
        +on(event_name: str, handler: Callable) None
        +off(event_name: str, handler: Callable) None
    }
    class IMiddleware {
        <<interface>>
        +process(cmd_or_query: Any, data_transfer_obj: Any, next_handler: Callable) Any
    }
    class ILogger {
        <<interface>>
        +info(message: str) None
        +warning(message: str) None
        +error(message: str) None
        +debug(message: str) None
    }
    class IConfig {
        <<interface>>
        +get(key: str, default: Any) Any
        +set(key: str, value: Any) None
    }

    %% Base Implementations
    class BaseModule {
        +register(app: App) None
        +boot(app: App) None
    }
    IModule <|.. BaseModule

    class MiddlewarePipeline {
        -middlewares: list~IMiddleware~
        +add(middleware: IMiddleware) None
        +execute(cmd_or_query: Any, data_transfer_obj: Any, final_handler: Callable) Any
    }

    class App {
        -container: IContainer
        -event_bus: IEventBus
        -modules: list~IModule~
        -pipeline: MiddlewarePipeline
        +use(module: IModule) None
        +use_middleware(middleware: IMiddleware) None
        +boot(auto_discover: Optional[str]) None
        +execute(command_class: type, input_dto: Any) Any
        +query(query_class: type, input_dto: Any) Any
        -_get_logger() Optional[ILogger]
    }
    App o-- IContainer
    App o-- IEventBus
    App o-- IModule
    App o-- MiddlewarePipeline

    class ModuleAutoDiscovery {
        +discover(modules_package: str, app: App) None$
    }

    %% Infrastructure Implementations
    class StdLibContainer {
        -_bindings: dict
        -_instances: dict
        -_factories: dict
        +bind(abstract: type, concrete: type) None
        +singleton(abstract: type, instance_or_factory: Union[Any, Callable]) None
        +resolve(abstract: type) T
    }
    IContainer <|.. StdLibContainer

    class MemoryEventBus {
        -_handlers: dict
        -logger: Optional[ILogger]
        +emit(event_name: str, data: Any) None
        +on(event_name: str, handler: Callable) None
        +off(event_name: str, handler: Callable) None
    }
    IEventBus <|.. MemoryEventBus

    class ResilientEventBus {
        -inner_bus: IEventBus
        -max_retries: int
        -_dlq: list
        -logger: Optional[ILogger]
        -_handlers: dict
        +emit(event_name: str, data: Any) None
        +on(event_name: str, handler: Callable) None
        +off(event_name: str, handler: Callable) None
        +get_dlq() list
        +reprocess() None
    }
    IEventBus <|.. ResilientEventBus
    ResilientEventBus o-- IEventBus

    class StdLogger {
        -_logger: logging.Logger
        +info(message: str) None
        +warning(message: str) None
        +error(message: str) None
        +debug(message: str) None
    }
    ILogger <|.. StdLogger

    class DictConfig {
        -_config: dict
        +get(key: str, default: Any) Any
        +set(key: str, value: Any) None
    }
    IConfig <|.. DictConfig

    class ConfigSource {
        <<interface>>
        +read() dict
    }

    class ConfigManager {
        -_sources: list~ConfigSource~
        -_cache: dict
        -_loaded: bool
        +add_source(source: ConfigSource) None
        +get(key: str, default: Any) Any
        +set(key: str, value: Any) None
        -_load() None
    }
    IConfig <|.. ConfigManager
    ConfigManager o-- ConfigSource

    class DictSource {
        -data: dict
        +read() dict
    }
    ConfigSource <|.. DictSource

    class EnvSource {
        -prefix: str
        +read() dict
    }
    ConfigSource <|.. EnvSource

    class JsonSource {
        -filepath: str
        +read() dict
    }
    ConfigSource <|.. JsonSource

    %% Middleware Implementations
    class LoggingMiddleware {
        -container: IContainer
        +process(cmd_or_query: Any, data_transfer_obj: Any, next_handler: Callable) Any
    }
    IMiddleware <|.. LoggingMiddleware

    class TimingMiddleware {
        +process(cmd_or_query: Any, data_transfer_obj: Any, next_handler: Callable) Any
    }
    IMiddleware <|.. TimingMiddleware

    class ValidationMiddleware {
        +process(cmd_or_query: Any, data_transfer_obj: Any, next_handler: Callable) Any
    }
    IMiddleware <|.. ValidationMiddleware
